--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-stage-0": "^6.16.0",
     "babel-runtime": "^6.20.0",
-    "bootstrap": "4.0.0-alpha.6",
+    "bootstrap": "4.0.0-beta",
     "compression-webpack-plugin": "^0.4.0",
     "css-loader": "^0.28.0",
     "extract-text-webpack-plugin": "^2.0.0-rc.3",
@@ -27,6 +27,7 @@
     "jquery": "^3.1.1",
     "js-cookie": "^2.1.3",
     "node-sass": "^4.0.0",
+    "popper.js": "^1.12.5",
     "postcss-functions": "^2.1.0",
     "postcss-loader": "^2.0.5",
     "rails-ujs": "^5.1.1",
