--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-stage-0": "^6.16.0",
     "babel-runtime": "^6.20.0",
-    "bootstrap": "4.0.0-beta",
+    "bootstrap": "^4.0",
     "compression-webpack-plugin": "^0.4.0",
     "css-loader": "^0.28.0",
     "extract-text-webpack-plugin": "^2.0.0-rc.3",
@@ -33,6 +33,8 @@
     "popper.js": "^1.12.5",
     "postcss-functions": "^2.1.0",
     "postcss-loader": "^2.0.5",
+    "pug": "^2.0.3",
+    "pug-loader": "^2.4.0",
     "rails-ujs": "^5.1.1",
     "sass-loader": "^6.0.0",
     "stats-webpack-plugin": "^0.6.0",
