--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "html-loader": "^0.4.4",
     "jquery": "^3.1.1",
     "js-cookie": "^2.1.3",
+    "magnific-popup": "^1.1.0",
     "node-sass": "^4.0.0",
     "popper.js": "^1.12.5",
     "postcss-functions": "^2.1.0",
