--- a/package.json
+++ b/package.json
@@ -8,42 +8,51 @@
     "start": "webpack-dev-server --config config/webpack.config.js --hot --inline"
   },
   "dependencies": {
-    "autoprefixer": "^7.1.1",
-    "axios": "^0.16.1",
-    "babel-cli": "^6.18.0",
-    "babel-core": "^6.18.2",
-    "babel-loader": "^7.0.0",
-    "babel-plugin-lodash": "^3.2.9",
-    "babel-plugin-transform-runtime": "^6.15.0",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-stage-0": "^6.16.0",
-    "babel-runtime": "^6.20.0",
-    "bootstrap": "^4.0",
-    "compression-webpack-plugin": "^0.4.0",
-    "css-loader": "^0.28.0",
-    "extract-text-webpack-plugin": "^2.0.0-rc.3",
-    "file-loader": "^0.11.1",
+    "@babel/core": "^7.7.7",
+    "@babel/plugin-proposal-class-properties": "^7.7.4",
+    "@babel/plugin-proposal-function-bind": "^7.7.4",
+    "@babel/plugin-syntax-dynamic-import": "^7.7.4",
+    "@babel/plugin-transform-regenerator": "^7.7.5",
+    "@babel/plugin-transform-runtime": "^7.7.6",
+    "@babel/preset-env": "^7.7.7",
+    "@babel/preset-react": "^7.7.4",
+    "@babel/runtime": "^7.7.7",
+    "@svgr/webpack": "^5.0.1",
+    "autoprefixer": "^9.7.3",
+    "axios": "^0.19.0",
+    "babel-loader": "^8.0.6",
+    "bootstrap": "^4.4.1",
+    "compression-webpack-plugin": "^3.0.1",
+    "css-loader": "^3.4.0",
+    "cssnano": "^4.1.10",
+    "extract-css-chunks-webpack-plugin": "^4.7.1",
+    "file-loader": "^5.0.2",
     "font-awesome": "^4.7.0",
-    "handlebars": "^4.0.10",
-    "handlebars-loader": "^1.5.0",
-    "html-loader": "^0.4.4",
-    "jquery": "^3.1.1",
-    "js-cookie": "^2.1.3",
+    "handlebars": "^4.5.3",
+    "handlebars-loader": "^1.7.1",
+    "html-loader": "^0.5.5",
+    "jquery": "^3.4.1",
+    "js-cookie": "^2.2.1",
     "magnific-popup": "^1.1.0",
-    "node-sass": "^4.0.0",
-    "popper.js": "^1.12.5",
-    "postcss-functions": "^2.1.0",
-    "postcss-loader": "^2.0.5",
-    "pug": "^2.0.3",
+    "node-sass": "^4.13.0",
+    "popper.js": "^1.16.0",
+    "postcss-flexbugs-fixes": "^4.1.0",
+    "postcss-functions": "^3.0.0",
+    "postcss-loader": "^3.0.0",
+    "postcss-preset-env": "^6.7.0",
+    "postcss-url": "^8.0.0",
+    "pug": "^2.0.4",
     "pug-loader": "^2.4.0",
-    "rails-ujs": "^5.1.1",
-    "sass-loader": "^6.0.0",
-    "stats-webpack-plugin": "^0.6.0",
-    "style-loader": "^0.18.2",
-    "turbolinks": "^5.0.0",
-    "url-loader": "^0.5.7",
-    "webpack": "^3.0.0",
-    "webpack-dev-server": "^2.3.0",
-    "webpack-hot-middleware": "^2.7.1"
+    "rails-ujs": "^5.2.4-1",
+    "sass-loader": "^8.0.0",
+    "stats-webpack-plugin": "^0.7.0",
+    "style-loader": "^1.1.2",
+    "turbolinks": "^5.2.0",
+    "url-loader": "^3.0.0",
+    "webpack": "^4.41.5",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.10.1",
+    "webpack-hot-middleware": "^2.25.0",
+    "webpack-manifest-plugin": "^2.2.0"
   }
 }
